--- a/package.json
+++ b/package.json
@@ -15,13 +15,19 @@
   "prettier": "@shopify/prettier-config",
   "dependencies": {
     "@shopify/hydrogen": "2025.7.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.26",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
     "isbot": "^5.1.22",
+    "lucide-react": "^0.559.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-icons": "^5.5.0",
     "react-router": "7.9.2",
     "react-router-dom": "7.9.2",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
