--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   },
   "prettier": "@shopify/prettier-config",
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@remix-run/react": "^2.17.2",
     "@shopify/hydrogen": "2025.7.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.26",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
