--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "prettier": "@shopify/prettier-config",
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.11",
-    "@remix-run/react": "^2.17.2",
+    "@radix-ui/react-label": "^2.1.8",
+    "@react-router/serve": "7.9.2",
     "@shopify/hydrogen": "2025.7.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -31,6 +32,7 @@
     "react-icons": "^5.5.0",
     "react-router": "7.9.2",
     "react-router-dom": "7.9.2",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.6"
   },
